# code-route-pro

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: api_router.py  main.py
backend/app/core/: config.py  database.py  email.py  exceptions.py  logging.py  middleware.py  redis.py  security.py
backend/app/modules/admin/api/: router.py
backend/app/modules/admin/infrastructure/: models.py
backend/app/modules/auth/api/: dependencies.py  router.py  schemas.py
backend/app/modules/auth/application/: dtos.py  use_cases.py
backend/app/modules/auth/domain/: entities.py  exceptions.py  repositories.py
backend/app/modules/auth/infrastructure/: models.py  repositories.py
backend/app/modules/content/api/: router.py  schemas.py
backend/app/modules/content/application/: dtos.py  use_cases.py
backend/app/modules/content/domain/: entities.py  repositories.py
backend/app/modules/content/infrastructure/: models.py  repositories.py
backend/app/modules/exams/api/: router.py  schemas.py
backend/app/modules/exams/application/: dtos.py  post_exam_service.py  use_cases.py
backend/app/modules/exams/domain/: entities.py  repositories.py
backend/app/modules/exams/infrastructure/: models.py  repositories.py
backend/app/modules/gamification/api/: router.py
backend/app/modules/gamification/infrastructure/: models.py
backend/app/modules/notifications/api/: router.py
backend/app/modules/notifications/infrastructure/: models.py  ws_manager.py
backend/app/modules/progress/api/: router.py
backend/app/modules/progress/infrastructure/: models.py
backend/app/modules/recommendations/api/: router.py
backend/app/modules/recommendations/infrastructure/: models.py
backend/app/modules/users/api/: router.py  schemas.py
backend/app/modules/users/application/: dtos.py  use_cases.py
backend/app/modules/users/domain/: repositories.py
backend/app/modules/users/infrastructure/: repository.py  storage.py
backend/app/shared/: mixins.py  pagination.py
backend/app/shared/domain/: base_entity.py  base_repository.py  enums.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_endpoints.py
backend/tests/unit/: test_auth_use_cases.py
frontend/: Dockerfile  (+4 more)
(+125 files in other folders)
